Correct text and image alignment issues

--- a/less/main.less
+++ b/less/main.less
@@ -25,6 +25,10 @@ p {
     text-transform: lowercase;
 }
 
+#grayArticle {
+    background-color: @gray;
+}
+
 //Header Style
 header {
     nav {
@@ -48,9 +52,6 @@ header {
         }
     }
 }
-
-//Section
-
 
 // Footer 
 footer {
